src/snapshots/afrotd__parser__tests__interpretation_3.4.3_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 4
  - 3
index: 2
text: "Nach dem Zwei-Minuten-Timeout in der vierten Spielperiode und\nbei laufender Game Clock hat Team B keine Timeouts mehr verfügbar.\nBei dem Versuch, Zeit einzusparen, überquert B77 die neutrale Zone\nund berührt einen Team A-Spieler."
ruling: "Dead Ball Foul. Strafe\n– 5 Meter vom Succeeding Spot. Da sich das Foul nach dem ZweiMinuten-Timeout ereignet, fällt dieses Foul unter die 10-Sekunden-Abzug-Regel (Regel 3.4.4)."
