src/snapshots/afrotd__parser__tests__interpretation_3.4.3_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 4
  - 3
index: 3
text: "Nach dem Zwei-Minuten-Timeout in der vierten Spielperiode\nund bei laufender Game Clock hat Team A keine Timeouts mehr verfügbar. Bei dem Versuch, Zeit einzusparen, wirft Ballträger A12 von hinter\noder jenseits der neutralen Zone einen Rückpass ins Aus."
ruling: "Strafe – 5 Meter vom Spot of Foul und Downverlust. Da sich das Foul\nnach dem Zwei-Minuten-Timeout ereignet, fällt dieses Foul unter die\n10-Sekunden-Abzug-Regel (Regel 3.4.4)."
