src/snapshots/afrotd__parser__tests__interpretation_3.4.3_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 4
  - 3
index: 4
text: "Der Ballträger wirft einen unvollständigen Vorwärtspass von jenseits der neutralen Zone, um Zeit einzusparen."
ruling: "Strafe –\n5 Meter vom Spot of Foul und Downverlust. Die Game Clock startet\nmit der Ballfreigabe (Regel 7.3.2 Strafe). Beachte: Ereignet sich das\nFoul nach dem Zwei-Minuten-Timeout, fällt es unter die 10-SekundenAbzug-Regel (Regel 3.4.4)."
