src/snapshots/afrotd__parser__tests__interpretation_3.4.3_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 4
  - 3
index: 5
text: "Zu einem späten Zeitpunkt im Spiel liegt Team A mit vier Punkten zurück und befindet sich in der Nähe von der B-Endzone. Nach\neinem Laufspiel wird der Ballträger inbounds getackelt. Einige auf dem\nBallträger liegende Team B-Spieler lassen sich offensichtlich und absichtlich viel Zeit, bevor sie den Ballträger aufstehen lassen oder führen\nandere Aktionen durch, wodurch Anstrengungen der Schiedsrichter zur\nBallfreigabe verzögert werden."
ruling: "Dead Ball Foul gegen Team\nB, Spielverzögerung. Wenn der Ball spielbereit ist, zeigt der Referee\nan, dass die Play Clock bei 25 Sekunden startet, und die Game Clock\nstartet mit dem Snap."
