src/snapshots/afrotd__parser__tests__interpretation_3.4.4_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 4
  - 4
index: 1
text: "2. und 10 von der B-30. Während der zweiten Halbzeit läuft die\nGame Clock. Team A liegt mit zwei Punkten zurück und hat keine Timeouts mehr. Nachdem der Ball spielbereit ist, verursacht Lineman A66\neinen Fehlstart und als die Schiedsrichter die Game Clock anhalten,\nsteht sie bei (a) 13 Sekunden oder (b) 8 Sekunden. Team B nimmt sowohl die Meterstrafe als auch den Zeitabzug an."
ruling: "(a) Dead\nBall Foul, Fehlstart. 5-Meterstrafe mit 10-Sekunden-Abzug von der Game Clock, die auf 3 Sekunden gesetzt wird. 2. und 15 von der B-35.\nDie Game Clock startet mit dem Signal des Referees. (b) Das Spiel ist\nvorüber. Team B gewinnt."
