src/snapshots/afrotd__parser__tests__interpretation_3.4.4_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 4
  - 4
index: 2
text: "2. und 10 von der B-30. Während der zweiten Halbzeit läuft\ndie Game Clock. Team A liegt mit zwei Punkten zurück und hat keine Timeouts mehr. Beim Snap befinden sich fünf Team A-Spieler im\nBackfield. A22 advanct zu einem Raumgewinn von drei Metern bis zu\nder B-27. Als der Ball für dead erklärt wird, bleibt die Game Clock bei\n(a) 13 Sekunden oder (b) 8 Sekunden stehen."
ruling: "(a) und (b)\n5-Meterstrafe, illegale Formation. 2. und 15 von der B-35. Da die illegale Formation ein Foul ist, durch das die Game Clock nicht sofort\nangehalten wird, trifft der 10-Sekunden-Abzug nicht zu. Nach der Strafdurchführung startet die Game Clock beim Signal des Referees."
