src/snapshots/afrotd__parser__tests__interpretation_3.4.4_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 4
  - 4
index: 3
text: "3. und 7 von der B-35. Team A führt mit 24-21 bei weniger als\neine Minute verbleibender Spielzeit in der vierten Spielperiode und laufender Game Clock. Tackle B55 springt in die neutrale Zone und berührt A77. Die Schiedsrichter pfeifen ab und die Game Clock bleibt bei\n38 Sekunden stehen. Team B hat keine Timeouts mehr übrig."
ruling: "Dead Ball Foul. Offside gegen Team B. 5-Meterstrafe und 10Sekunden-Abzug von der Game Clock. Die Game Clock wird auf 28\nSekunden gesetzt. Team A’s Ball, 3. und 2 von der B-30. Die Game\nClock startet beim Signal des Referees."
