src/snapshots/afrotd__parser__tests__interpretation_3.4.4_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 4
  - 4
index: 5
text: "2. und 10 von der B-30 bei laufender Game Clock. Team A liegt\nin den Punkten zurück. Guard A66 befindet sich in einem Dreipunktstand, verpasst den Snap Count, stürmt vorwärts und verursacht dadurch einen Fehlstart. B77 verursacht dann ein persönliches Dead Ball\nFoul oder ein unsportliches Verhalten Dead Ball Foul. Die Game Clock\nwird bei 8 Sekunden verbleibender Spielzeit angehalten. Das ereignet\nsich (a) in der vierten Spielperiode oder (b) in der zweiten Spielperiode."
ruling: "(a) Das Spiel ist vorüber, wenn Team B den 10-SekundenAbzug in Zusammenhang mit dem Fehlstart akzeptiert. Dadurch wird\ndie Strafe für B77’s Dead Ball Foul nicht durchgeführt. (b) Die Halbzeit\nist vorüber, wenn Team B den 10-Sekunden-Abzug in Zusammenhang\nmit dem Fehlstart akzeptiert. Durch den 10-Sekunden-Abzug ereignet\nsich Team B‘s Foul per Definition, nachdem die erste Halbzeit vorüber\nist und daher wird die Strafe übertragen. In beiden Fällen (a) und (b)\nkann Team A den 10-Sekunden-Abzug vermeiden, in dem es ein verbleibendes Team-Timeout nimmt. In diesem Fall würde auch die Strafe\nfür das Team B Foul durchgeführt und Team A hätte einen 1. und 10\nvon der B-20."
